Fixed bug #32993 (implemented Iterator function current() don't throw exception)